# digits

./: .gitattributes  .gitignore  App.cpp  App.h  CMakeLists.txt  DrawPane.cpp  DrawPane.h  Frame.cpp  Frame.h  Node.cpp  Node.h  README.md  Window.h  main.cpp  params.csv  run.sh
c++/: App.cpp  App.h  DrawPane.cpp  DrawPane.h  Frame.cpp  Frame.h  Node.cpp  Node.h  main.cpp
c++/App-Classes/: App.h  DrawPane.cpp  DrawPane.h  Frame.cpp  Frame.h
c++/Neural_Network/: Network.cpp  Network.h  Node.cpp  Node.h
c++/wxClasses/: App.cpp  DrawPane.cpp  Frame.cpp  Frame.h
scripts/: run.ps1  run.sh
